vac-rs/crates/surfaces/tui/src/bottom_pane/chat_composer/snapshots/vac_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_queue_short_with_context.snap
---
source: crates/surfaces/tui/src/bottom_pane/chat_composer/footer_flash_parts/../split_002_footerflash_tests.rs.inc
expression: terminal.backend()
---
"                                                  "
"› Test                                            "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"  tab to queue · Plan mode      98% context left  "
